openturns/1.20/_sources/auto_meta_modeling/kriging_metamodel/index.rst.txt


.. _sphx_glr_auto_meta_modeling_kriging_metamodel:

.. _Kriging metamodel:

Kriging metamodel
-----------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : propagate uncertainties">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_propagate_kriging_ishigami_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_propagate_kriging_ishigami.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : propagate uncertainties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : multiple input dimensions">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : multiple input dimensions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : draw the likelihood">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_likelihood_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_likelihood.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : draw the likelihood</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : cantilever beam model">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_cantilever_beam_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_cantilever_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : cantilever beam model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Configuring an arbitrary trend in Kriging">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_beam_arbitrary_trend_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_beam_arbitrary_trend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Configuring an arbitrary trend in Kriging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Example of multi output Kriging on the fire satellite model">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_multioutput_firesatellite_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_multioutput_firesatellite.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example of multi output Kriging on the fire satellite model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging the cantilever beam model using HMAT">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_cantilever_beam_hmat_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_cantilever_beam_hmat.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging the cantilever beam model using HMAT</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : generate trajectories from a metamodel">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_simulate_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_simulate.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : generate trajectories from a metamodel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Choose the trend basis of a kriging metamodel">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_beam_trend_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_beam_trend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Choose the trend basis of a kriging metamodel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In typical machine learning applications, Gaussian process regression/Kriging surrogate models ...">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_isotropic_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_isotropic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging with an isotropic covariance function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging: metamodel of the Branin-Hoo function">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_branin_function_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_branin_function.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging: metamodel of the Branin-Hoo function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : quick-start">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_1d_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_1d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : quick-start</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sequentially adding new points to a kriging">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_sequential_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_sequential.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sequentially adding new points to a kriging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Advanced kriging">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_advanced_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_advanced.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Advanced kriging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging :configure the optimization solver">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_hyperparameters_optimization_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_hyperparameters_optimization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging :configure the optimization solver</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : choose a trend vector space">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_kriging_chose_trend_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_kriging_chose_trend.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : choose a trend vector space</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Kriging : draw covariance models">

.. only:: html

  .. image:: /auto_meta_modeling/kriging_metamodel/images/thumb/sphx_glr_plot_draw_covariance_models_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_kriging_metamodel_plot_draw_covariance_models.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Kriging : draw covariance models</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_meta_modeling/kriging_metamodel/plot_propagate_kriging_ishigami
   /auto_meta_modeling/kriging_metamodel/plot_kriging
   /auto_meta_modeling/kriging_metamodel/plot_kriging_likelihood
   /auto_meta_modeling/kriging_metamodel/plot_kriging_cantilever_beam
   /auto_meta_modeling/kriging_metamodel/plot_kriging_beam_arbitrary_trend
   /auto_meta_modeling/kriging_metamodel/plot_kriging_multioutput_firesatellite
   /auto_meta_modeling/kriging_metamodel/plot_kriging_cantilever_beam_hmat
   /auto_meta_modeling/kriging_metamodel/plot_kriging_simulate
   /auto_meta_modeling/kriging_metamodel/plot_kriging_beam_trend
   /auto_meta_modeling/kriging_metamodel/plot_kriging_isotropic
   /auto_meta_modeling/kriging_metamodel/plot_kriging_branin_function
   /auto_meta_modeling/kriging_metamodel/plot_kriging_1d
   /auto_meta_modeling/kriging_metamodel/plot_kriging_sequential
   /auto_meta_modeling/kriging_metamodel/plot_kriging_advanced
   /auto_meta_modeling/kriging_metamodel/plot_kriging_hyperparameters_optimization
   /auto_meta_modeling/kriging_metamodel/plot_kriging_chose_trend
   /auto_meta_modeling/kriging_metamodel/plot_draw_covariance_models

